--- a/source/main.html
+++ b/source/main.html
@@ -8,7 +8,8 @@
   <meta name="description" content="Jewellery">
   <title>Jewellery</title>
   <link rel="preload" href="fonts/cormorantgaramond-bold.woff2" type="font/woff2" as="font" crossorigin="anonymous">
-  <link rel="preload" href="fonts/cormorantgaramond-mediumitalic.woff2" type="font/woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="fonts/cormorantgaramond-mediumitalic.woff2" type="font/woff2" as="font"
+    crossorigin="anonymous">
   <link rel="preload" href="fonts/cormorantgaramond-regular.woff2" type="font/woff2" as="font" crossorigin="anonymous">
   <link rel="preload" href="fonts/cormorantgaramond-semibold.woff2" type="font/woff2" as="font" crossorigin="anonymous">
   <link rel="preload" href="fonts/poppins-bold.woff2" type="font/woff2" as="font" crossorigin="anonymous">
@@ -18,53 +19,71 @@
   <link rel="icon" href="favicon.ico">
 </head>
 
-<body class="page__body">
-  <header class="page-header container">
-    <h1 class="visually-hidden">
-      CH jewellery
-    </h1>
-    <section class="page-header__header header">
-      <div class="header__search search">
-        <label class="visually-hidden" for="search">
-          Type here to search
-        </label>
-        <input type="search" placeholder="Type here to search" id="search">
+<body class="page__body nojs">
+  <header class="page-header">
+      <h1 class="visually-hidden">
+        CH jewellery
+      </h1>
+      <div class="page-header__header container header">
+        <div class="header__search search">
+          <label class="visually-hidden" for="search">
+            Type here to search
+          </label>
+          <input type="search" placeholder="Type here to search" id="search">
+        </div>
+        <div class="header__logo logo">
+          <a class="logo__link" href="index.html" aria-label="Logotype CH jewellery. Go to spreading page">
+            <svg width="66" height="66" viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg">
+              <use xlink:href="img/sprite_auto.svg#logo"></use>
+            </svg>
+          </a>
+        </div>
+        <div class="header__user user">
+          <svg width="18" height="16" viewBox="0 0 20 18" xmlns="http://www.w3.org/2000/svg">
+            <use xlink:href="img/sprite_auto.svg#icon_login"></use>
+          </svg>
+          <ul>
+            <li>
+              Login
+            </li>
+            <li>
+              Cart 0
+            </li>
+          </ul>
+        </div>
       </div>
-      <div class="header__logo">
-        <a class="logo__link" href="index.html" aria-label="Go to spreading page">
-          <img class="logo__img" src="img/logo.svg" width="66" height="66" alt="Logotype CH jewellery">
-        </a>
-      </div>
-      <div class="header__user user">
+      <nav class="header__nav nav">
+        <button type="button" class="nav__toggle">
+          <span class="visually-hidden">Открыть меню</span>
+        </button>
         <ul>
           <li>
-            Login
+            <a class="nav__link" href="main.html#">
+              What’s new
+            </a>
           </li>
           <li>
-            Cart 0
+            <a class="nav__link" href="main.html#">
+              Chokers
+            </a>
+          </li>
+          <li>
+            <a class="nav__link" href="main.html#">
+              Necklaces
+            </a>
+          </li>
+          <li>
+            <a class="nav__link" href="main.html#">
+              Rings
+            </a>
+          </li>
+          <li>
+            <a class="nav__link" href="main.html#">
+              Earrings
+            </a>
           </li>
         </ul>
-      </div>
-    </section>
-    <section class="page-header__nav nav">
-      <ul>
-        <li>
-          What’s new
-        </li>
-        <li>
-          Chokers
-        </li>
-        <li>
-          Necklaces
-        </li>
-        <li>
-          Rings
-        </li>
-        <li>
-          Earrings
-        </li>
-      </ul>
-    </section>
+      </nav>
   </header>
   <main class="page-main">
     <section class="page-main__promo promo webp no-webp">
@@ -102,8 +121,8 @@
   <footer>
   </footer>
 
-    <script src="js/main.js"></script>
-    <script src="js/vendor.js"></script>
+  <script src="js/main.js"></script>
+  <script src="js/vendor.js"></script>
 
 </body>
 
