--- a/source/login.html
+++ b/source/login.html
@@ -8,7 +8,8 @@
   <meta name="description" content="Jewellery">
   <title>Jewellery</title>
   <link rel="preload" href="fonts/cormorantgaramond-bold.woff2" type="font/woff2" as="font" crossorigin="anonymous">
-  <link rel="preload" href="fonts/cormorantgaramond-mediumitalic.woff2" type="font/woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="fonts/cormorantgaramond-mediumitalic.woff2" type="font/woff2" as="font"
+    crossorigin="anonymous">
   <link rel="preload" href="fonts/cormorantgaramond-regular.woff2" type="font/woff2" as="font" crossorigin="anonymous">
   <link rel="preload" href="fonts/cormorantgaramond-semibold.woff2" type="font/woff2" as="font" crossorigin="anonymous">
   <link rel="preload" href="fonts/poppins-bold.woff2" type="font/woff2" as="font" crossorigin="anonymous">
@@ -25,16 +26,13 @@
     </h1>
     <div class="page-header__header container header">
       <div class="header__search search">
-        <svg width="16" height="16" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" fill="currentColor" stroke="currentColor">
-          <use xlink:href="img/sprite_auto.svg#icon_search"></use>
-        </svg>
         <label class="visually-hidden" for="search">
           Type here to search
         </label>
         <input type="search" placeholder="Type here to search" id="search">
       </div>
       <div class="header__logo logo">
-        <a class="logo__link" aria-label="Logotype CH jewellery. Go to main page">
+        <a class="logo__link" href="main.html" aria-label="Logotype CH jewellery. Go to main page">
           <svg width="66" height="66" viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg">
             <use xlink:href="img/sprite_auto.svg#logo"></use>
           </svg>
@@ -42,28 +40,30 @@
       </div>
       <div class="header__user user">
         <a class="user__icon-login" href="login.html" alt="Go to log in page">
-          <svg width="18" height="16" viewBox="0 0 20 18" xmlns="http://www.w3.org/2000/svg" fill="currentColor" stroke="currentColor">
+          <svg width="18" height="16" viewBox="0 0 20 18" xmlns="http://www.w3.org/2000/svg" fill="currentColor"
+            stroke="currentColor">
             <use xlink:href="img/sprite_auto.svg#icon_login"></use>
           </svg>
         </a>
-        <ul>
-          <li>
-            <a href="login.html" alt="Go to log in page">
-              Login
-            </a>
-          </li>
-          <li>
-            <a href="#" alt="Go to cart">
-              Cart <span id="total-cart-count">0</span>
-            </a>
-          </li>
-        </ul>
+          <ul>
+            <li>
+              <a href="login.html" alt="Go to log in page">
+                Login
+              </a>
+            </li>
+            <li>
+              <a href="#" alt="Go to cart">
+                Cart <span id="total-cart-count">0</span>
+              </a>
+            </li>
+          </ul>
       </div>
     </div>
     <nav class="header__nav nav container">
       <button type="button" class="nav__toggle">
         <span class="visually-hidden">Открыть меню</span>
-        <svg width="18" height="16" viewBox="0 0 20 18" xmlns="http://www.w3.org/2000/svg" fill="currentColor" stroke="currentColor">
+        <svg width="18" height="16" viewBox="0 0 20 18" xmlns="http://www.w3.org/2000/svg" fill="currentColor"
+          stroke="currentColor">
           <use xlink:href="img/sprite_auto.svg#icon_menu-burger"></use>
         </svg>
       </button>
@@ -93,74 +93,11 @@
             Earrings
           </a>
         </li>
-
-        <li class="nav__item nav__item--more">
-          <a class="nav__link" href="main.html#">
-            About CH
-          </a>
-        </li>
-        <li class="nav__item nav__item--more">
-          <a class="nav__link" href="main.html#">
-            Stores & Hours
-          </a>
-        </li>
-        <li class="nav__item nav__item--more">
-          <a class="nav__link" href="main.html#">
-            Contact Us
-          </a>
-        </li>
-        <li class="nav__item nav__item--more">
-          <a class="nav__link" href="main.html#">
-            About CH
-          </a>
-        </li>
-        <li class="nav__item nav__item--more nav__item--login">
-          <a class="nav__link" href="main.html#">
-            Login
-          </a>
-        </li>
       </ul>
     </nav>
   </header>
-  <main class="page-main">
-    <section class="page-main__promo promo webp no-webp">
-      <div class="promo__content container">
-        <h2>
-          Perfection
-        </h2>
-        <p>
-          made to be yours
-        </p>
-      </div>
-    </section>
-    <section class="slider">
-      <h2>
-        New In
-      </h2>
-      <a href="catalog.html" aria-label="Go to the catalog page">
-        Shop Now
-      </a>
-      <div class="slider__wrapper">
-        <ul>
-          <li>
-            <img>
-            <h3>
-              Necklace with amethyst
-            </h3>
-            <span>
-              $ 145
-            </span>
-          </li>
-        </ul>
-      </div>
-    </section>
+  <main>
   </main>
-  <footer>
-  </footer>
-
-  <script src="js/main.js"></script>
-  <script src="js/vendor.js"></script>
 
 </body>
-
 </html>
