--- a/source/main.html
+++ b/source/main.html
@@ -21,69 +21,110 @@
 
 <body class="page__body nojs">
   <header class="page-header">
-      <h1 class="visually-hidden">
-        CH jewellery
-      </h1>
-      <div class="page-header__header container header">
-        <div class="header__search search">
-          <label class="visually-hidden" for="search">
-            Type here to search
-          </label>
-          <input type="search" placeholder="Type here to search" id="search">
-        </div>
-        <div class="header__logo logo">
-          <a class="logo__link" href="index.html" aria-label="Logotype CH jewellery. Go to spreading page">
-            <svg width="66" height="66" viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg">
-              <use xlink:href="img/sprite_auto.svg#logo"></use>
-            </svg>
-          </a>
-        </div>
-        <div class="header__user user">
-          <svg width="18" height="16" viewBox="0 0 20 18" xmlns="http://www.w3.org/2000/svg">
+    <h1 class="visually-hidden">
+      CH jewellery
+    </h1>
+    <div class="page-header__header container header">
+      <div class="header__search search">
+        <svg width="16" height="16" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" fill="currentColor"
+          stroke="currentColor">
+          <use xlink:href="img/sprite_auto.svg#icon_search"></use>
+        </svg>
+        <label class="visually-hidden" for="search">
+          Type here to search
+        </label>
+        <input type="search" placeholder="Type here to search" id="search">
+      </div>
+      <div class="header__logo logo">
+        <a class="logo__link" aria-label="Logotype CH jewellery. Go to main page">
+          <svg width="66" height="66" viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg">
+            <use xlink:href="img/sprite_auto.svg#logo"></use>
+          </svg>
+        </a>
+      </div>
+      <div class="header__user user">
+        <a class="user__icon-login" href="login.html" alt="Go to log in page">
+          <svg width="18" height="16" viewBox="0 0 20 18" xmlns="http://www.w3.org/2000/svg" fill="currentColor"
+            stroke="currentColor">
             <use xlink:href="img/sprite_auto.svg#icon_login"></use>
           </svg>
-          <ul>
-            <li>
-              Login
-            </li>
-            <li>
-              Cart 0
-            </li>
-          </ul>
-        </div>
-      </div>
-      <nav class="header__nav nav">
-        <button type="button" class="nav__toggle">
-          <span class="visually-hidden">Открыть меню</span>
-        </button>
+        </a>
         <ul>
           <li>
-            <a class="nav__link" href="main.html#">
-              What’s new
+            <a href="login.html" alt="Go to log in page">
+              Login
             </a>
           </li>
           <li>
-            <a class="nav__link" href="main.html#">
-              Chokers
-            </a>
-          </li>
-          <li>
-            <a class="nav__link" href="main.html#">
-              Necklaces
-            </a>
-          </li>
-          <li>
-            <a class="nav__link" href="main.html#">
-              Rings
-            </a>
-          </li>
-          <li>
-            <a class="nav__link" href="main.html#">
-              Earrings
+            <a href="#" alt="Go to cart">
+              Cart <span id="total-cart-count">0</span>
             </a>
           </li>
         </ul>
-      </nav>
+      </div>
+    </div>
+    <nav class="header__nav nav container">
+      <button type="button" class="nav__toggle">
+        <span class="visually-hidden">Открыть меню</span>
+        <svg width="18" height="16" viewBox="0 0 20 18" xmlns="http://www.w3.org/2000/svg" fill="currentColor"
+          stroke="currentColor">
+          <use xlink:href="img/sprite_auto.svg#icon_menu-burger"></use>
+        </svg>
+      </button>
+      <ul>
+        <li>
+          <a class="nav__link" href="main.html#" alt="Go to the section what’s new">
+            What’s new
+          </a>
+        </li>
+        <li>
+          <a class="nav__link" href="main.html#" alt="Go to the section chokers">
+            Chokers
+          </a>
+        </li>
+        <li>
+          <a class="nav__link" href="main.html#" alt="Go to the section necklaces">
+            Necklaces
+          </a>
+        </li>
+        <li>
+          <a class="nav__link" href="main.html#" alt="Go to the section rings">
+            Rings
+          </a>
+        </li>
+        <li>
+          <a class="nav__link" href="main.html#">
+            Earrings
+          </a>
+        </li>
+
+        <li class="nav__item nav__item--more">
+          <a class="nav__link" href="main.html#">
+            About CH
+          </a>
+        </li>
+        <li class="nav__item nav__item--more">
+          <a class="nav__link" href="main.html#">
+            Stores & Hours
+          </a>
+        </li>
+        <li class="nav__item nav__item--more">
+          <a class="nav__link" href="main.html#">
+            Contact Us
+          </a>
+        </li>
+        <li class="nav__item nav__item--more">
+          <a class="nav__link" href="main.html#">
+            About CH
+          </a>
+        </li>
+        <li class="nav__item nav__item--more nav__item--login">
+          <a class="nav__link" href="main.html#">
+            Login
+          </a>
+        </li>
+      </ul>
+    </nav>
   </header>
   <main class="page-main">
     <section class="page-main__promo promo webp no-webp">
