Добавляет аккордеон блоку faq

--- a/source/main.html
+++ b/source/main.html
@@ -610,9 +610,8 @@
               <source media="(max-width: 1023px)"
                 srcset="img/main/blog/alve-odonnell_medium.jpg 1x, img/main/blog/alve-odonnell_medium@2x.jpg 2x">
               <!--img size (min-width 1024px): 1x(width: 285px, hight: 300px 2x(width: 590px, hight: 600px-->
-              <img src="img/main/blog/alve-odonnell_large.jpg"
-                srcset="img/main/blog/alve-odonnell_large@2x.jpg 2x" width="285" height="300"
-                alt="Product image from the catalog">
+              <img src="img/main/blog/alve-odonnell_large.jpg" srcset="img/main/blog/alve-odonnell_large@2x.jpg 2x"
+                width="285" height="300" alt="Product image from the catalog">
             </picture>
           </div>
           <div class="articles__desс">
@@ -627,99 +626,104 @@
       </ul>
       </ul>
     </section>
+
+
     <section class="faq container">
       <h2>
         Frequently asked questions
       </h2>
       <div class="faq__block">
-        <ul class="faq__list">
-          <li>
+        <ul class="faq__list accordion" id="accordion">
+          <li class="accordion__item">
             <h3>
               What materials are the jewellery made of?
             </h3>
-            <p>
+            <button type="button" class="faq__toggle accordion__toggle">
+              <span class="visually-hidden">View answer</span>
+              <svg class="accordion__svg accordion__svg--down" width="23" height="12" viewBox="0 0 23 12"
+                xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor">
+                <use xlink:href="img/sprite_auto.svg#icon_accordion-down"></use>
+              </svg>
+              <svg class="accordion__svg accordion__svg--up" width="23" height="12" viewBox="0 0 23 12"
+                xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor">
+                <use xlink:href="img/sprite_auto.svg#icon_accordion-up"></use>
+              </svg>
+            </button>
+            <p class="accordion__text">
               Our jewellerry is made of solid gold, silver or leather. Also, some jewellery contains precious and
               semiprecious stones
               and crystals.
             </p>
-            <button type="button" class="faq__toggle accordion__toggle">
-              <span class="visually-hidden">View answer</span>
-              <svg class="accordion__toggle-img--down" width="23" height="12" viewBox="0 0 23 12"
-                xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor">
-                <use xlink:href="img/sprite_auto.svg#icon_accordion-down"></use>
-              </svg>
-              <svg class="accordion__toggle-img--down" width="23" height="12" viewBox="0 0 23 12"
-                xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor">
-                <use xlink:href="img/sprite_auto.svg#icon_accordion-up"></use>
-              </svg>
-            </button>
           </li>
-          <li>
+          <li class="accordion__item">
             <h3>
               Which countries do you deliver to?
             </h3>
-            <p>
+            <button type="button" class="faq__toggle accordion__toggle">
+              <span class="visually-hidden">View answer</span>
+              <svg class="accordion__svg accordion__svg--down" width="23" height="12" viewBox="0 0 23 12"
+                xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor">
+                <use xlink:href="img/sprite_auto.svg#icon_accordion-down"></use>
+              </svg>
+              <svg class="accordion__svg accordion__svg--up" width="23" height="12" viewBox="0 0 23 12"
+                xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor">
+                <use xlink:href="img/sprite_auto.svg#icon_accordion-up"></use>
+              </svg>
+            </button>
+            <p class="accordion__text">
               Our jewellerry is made of solid gold, silver or leather. Also, some jewellery contains precious and
               semiprecious
               stones
               and crystals.
             </p>
-            <button type="button" class="faq__toggle accordion__toggle">
-              <span class="visually-hidden">View answer</span>
-              <svg class="accordion__toggle-img--down" width="23" height="12" viewBox="0 0 23 12"
-                xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor">
-                <use xlink:href="img/sprite_auto.svg#icon_accordion-down"></use>
-              </svg>
-              <svg class="accordion__toggle-img--down" width="23" height="12" viewBox="0 0 23 12"
-                xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor">
-                <use xlink:href="img/sprite_auto.svg#icon_accordion-up"></use>
-              </svg>
-            </button>
           </li>
-          <li>
+          <li class="accordion__item">
             <h3>
               What are the payment methods?
             </h3>
-            <p>
+            <button type="button" class="faq__toggle accordion__toggle">
+              <span class="visually-hidden">View answer</span>
+              <svg class="accordion__svg accordion__svg--down" width="23" height="12" viewBox="0 0 23 12"
+                xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor">
+                <use xlink:href="img/sprite_auto.svg#icon_accordion-down"></use>
+              </svg>
+              <svg class="accordion__svg accordion__svg--up" width="23" height="12" viewBox="0 0 23 12"
+                xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor">
+                <use xlink:href="img/sprite_auto.svg#icon_accordion-up"></use>
+              </svg>
+            </button>
+            <p class="accordion__text">
               Our jewellerry is made of solid gold, silver or leather. Also, some jewellery contains precious and
               semiprecious
               stones
               and crystals.
             </p>
-            <button type="button" class="faq__toggle accordion__toggle">
-              <span class="visually-hidden">View answer</span>
-              <svg class="accordion__toggle-img--down" width="23" height="12" viewBox="0 0 23 12"
-                xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor">
-                <use xlink:href="img/sprite_auto.svg#icon_accordion-down"></use>
-              </svg>
-              <svg class="accordion__toggle-img--down" width="23" height="12" viewBox="0 0 23 12"
-                xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor">
-                <use xlink:href="img/sprite_auto.svg#icon_accordion-up"></use>
-              </svg>
-            </button>
+
           </li>
-          <li>
+          <li class="accordion__item">
             <h3>
               Can I return the jewellery if it didn&#8242;t fit me?
             </h3>
-            <p>
+            <button type="button" class="faq__toggle accordion__toggle">
+              <span class="visually-hidden">View answer</span>
+              <svg class="accordion__svg accordion__svg--down" width="23" height="12" viewBox="0 0 23 12"
+                xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor">
+                <use xlink:href="img/sprite_auto.svg#icon_accordion-down"></use>
+              </svg>
+              <svg class="accordion__svg accordion__svg--up" width="23" height="12" viewBox="0 0 23 12"
+                xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor">
+                <use xlink:href="img/sprite_auto.svg#icon_accordion-up"></use>
+              </svg>
+            </button>
+            <p class="accordion__text">
               Our jewellerry is made of solid gold, silver or leather. Also, some jewellery contains precious and
               semiprecious
               stones
               and crystals.
             </p>
-            <button type="button" class="faq__toggle accordion__toggle">
-              <span class="visually-hidden">View answer</span>
-              <svg class="accordion__toggle-img--down" width="23" height="12" viewBox="0 0 23 12"
-                xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor">
-                <use xlink:href="img/sprite_auto.svg#icon_accordion-down"></use>
-              </svg>
-              <svg class="accordion__toggle-img--down" width="23" height="12" viewBox="0 0 23 12"
-                xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor">
-                <use xlink:href="img/sprite_auto.svg#icon_accordion-up"></use>
-              </svg>
-            </button>
+
           </li>
+        </ul>
       </div>
     </section>
     <section class="follow container">
