--- a/source/main.html
+++ b/source/main.html
@@ -70,9 +70,9 @@
       </div>
     </div>
     <nav class="header__nav nav container">
-      <ul class="nav__main">
+      <ul class="nav__list nav__list--main">
         <li>
-          <a class="nav__link" href="main.html#newin" aria-label="Go to the section what&#8242;s new">
+          <a class="nav__link" href="#" aria-label="Go to the section what&#8242;s new">
             What&#8242;s new
           </a>
         </li>
@@ -97,7 +97,7 @@
           </a>
         </li>
       </ul>
-      <ul class="nav__about">
+      <ul class="nav__list nav__list--about">
         <li>
           <a class="nav__link" href="#">
             About CH
@@ -113,13 +113,8 @@
             Contact us
           </a>
         </li>
-        <li>
-          <a class="nav__link" href="#">
-            About CH
-          </a>
-        </li>
       </ul>
-      <ul class="nav__user">
+      <ul class="nav__list nav__list--user">
         <li>
           <a class="user__popup nav__link" href="login.html" aria-label="Go to log in page">
             Login
