PP главная страница (слайдер, блог)

--- a/source/main.html
+++ b/source/main.html
@@ -141,7 +141,7 @@
       <a class="novelty__link" href="catalog.html" aria-label="Go to the catalog page">
         <span>Shop now</span>
       </a>
-      <div class="novelty__carousel carousel ">
+      <div class="novelty__carousel carousel">
         <div class="carousel__item">
           <a href="#">
             <picture>
@@ -542,7 +542,7 @@
             </a>
           </div>
         </li>
-        <li class="articles__item">
+        <li class="articles__item articles__item--reverse">
           <div class="articles__image">
             <picture>
               <source type="image/webp"
