PP главной страницы

--- a/source/main.html
+++ b/source/main.html
@@ -613,10 +613,10 @@
         Frequently asked questions
       </h2>
       <div class="faq__block accordion">
-        <ul class="faq__list accordion__list">
+        <ul class="accordion__list">
           <li class="accordion__item">
             <h3 class="faq__toggle accordion__toggle" tabindex="0">
-              What materials are the jewellery made of?
+              <span>What materials are the&nbsp;jewellery made of?</span>
               <button type="button">
                 <span class="visually-hidden">View answer</span>
                 <svg class="accordion__svg accordion__svg--down" width="23" height="12" viewBox="0 0 23 12"
@@ -629,15 +629,18 @@
                 </svg>
               </button>
             </h3>
-            <p class="accordion__content">
-              Our jewellerry is made of solid gold, silver or leather. Also, some jewellery contains precious and
-              semiprecious stones
-              and crystals.
-            </p>
+            <div class="accordion__content">
+              <p>
+                Our jewellerry is made of solid gold, silver or leather. Also, some jewellery contains precious and
+                semiprecious stones
+                and crystals.
+
+              </p>
+            </div>
           </li>
           <li class="accordion__item">
             <h3 class="faq__toggle accordion__toggle" tabindex="0">
-              Which countries do you deliver to?
+              <span>Which countries do&nbsp;you&nbsp;deliver to?</span>
               <button type="button">
                 <span class="visually-hidden">View answer</span>
                 <svg class="accordion__svg accordion__svg--down" width="23" height="12" viewBox="0 0 23 12"
@@ -650,16 +653,18 @@
                 </svg>
               </button>
             </h3>
-            <p class="accordion__content">
-              Our jewellerry is made of solid gold, silver or leather. Also, some jewellery contains precious and
-              semiprecious
-              stones
-              and crystals.
-            </p>
+            <div class="accordion__content">
+              <p>
+                Our jewellerry is made of solid gold, silver or leather. Also, some jewellery contains precious and
+                semiprecious
+                stones
+                and crystals.
+              </p>
+            </div>
           </li>
           <li class="accordion__item">
             <h3 class="faq__toggle accordion__toggle" tabindex="0">
-              What are the payment methods?
+              <span>What are the payment&nbsp;methods?</span>
               <button type="button">
                 <span class="visually-hidden">View answer</span>
                 <svg class="accordion__svg accordion__svg--down" width="23" height="12" viewBox="0 0 23 12"
@@ -672,16 +677,18 @@
                 </svg>
               </button>
             </h3>
-            <p class="accordion__content">
-              Our jewellerry is made of solid gold, silver or leather. Also, some jewellery contains precious and
-              semiprecious
-              stones
-              and crystals.
-            </p>
+            <div class="accordion__content">
+              <p>
+                Our jewellerry is made of solid gold, silver or leather. Also, some jewellery contains precious and
+                semiprecious
+                stones
+                and crystals.
+              </p>
+            </div>
           </li>
           <li class="accordion__item">
             <h3 class="faq__toggle accordion__toggle " tabindex="0">
-              Can I return the jewellery if it didn&#8242;t fit me?
+              <span>Can I return the jewellery&nbsp;if it didn&#8242;t fit me?</span>
               <button type="button">
                 <span class="visually-hidden">View answer</span>
                 <svg class="accordion__svg accordion__svg--down" width="23" height="12" viewBox="0 0 23 12"
@@ -694,19 +701,22 @@
                 </svg>
               </button>
             </h3>
-            <p class="accordion__content">
-              Our jewellerry is made of solid gold, silver or leather. Also, some jewellery contains precious and
-              semiprecious
-              stones
-              and crystals.
-            </p>
+            <div class="accordion__content">
+              <p>
+                Our jewellerry is made of solid gold, silver or leather. Also, some jewellery contains precious and
+                semiprecious
+                stones
+                and crystals.
+              </p>
+            </div>
           </li>
         </ul>
       </div>
     </section>
     <section class="follow container">
       <h2>
-        @Chjewellery
+        <span>@</span>
+          Chjewellery
       </h2>
       <a class="follow__link" href="#" aria-label="Go to the follow us page">
         <span>Follow Us</span>
@@ -860,7 +870,7 @@
               News and updates from CH. No spam, we promise.
             </legend>
             <input type="email" name="email" placeholder="Your E-mail" required />
-            <div>
+            <div class="subscription__button">
               <a href=# aria-label="Go to registration page">
                 Sign up
               </a>
