--- a/source/main.html
+++ b/source/main.html
@@ -922,7 +922,7 @@
               </a>
             </li>
             <li>
-              <a href="#" aria-label="Go to log in page">
+              <a href="#" aria-label="Go to contacts page">
                 Contact us
               </a>
             </li>
