--- a/source/login.html
+++ b/source/login.html
@@ -32,36 +32,54 @@
           </svg>
         </a>
       </div>
+    </div>
   </header>
   <main class="page-main">
     <section class="page-main__login login container">
-      <button type="button" class="nav__toggle">
-        <span class="visually-hidden">Открыть меню</span>
-        <svg width="18" height="16" viewBox="0 0 20 18" xmlns="http://www.w3.org/2000/svg" fill="currentColor"
-          stroke="currentColor">
-          <use xlink:href="img/sprite_auto.svg#icon_menu-burger"></use>
-        </svg>
-      </button>
-      <div class="login__wrapper">
-        <h2>
-          Log in
-        </h2>
-        <form class="subscription__form form" action="#" method="post">
-          <fieldset>
-            <input type="email" name="email" placeholder="Your E-mail" required />
-            <input type="password" name="password" placeholder="Password" required />
-            <button type="submit">
-                Log in
+      <h2 class="visually-hidden">Log in</h2>
+          <article class="popup  login">
+            <button type="button" class="login__close-button popup__close-button">
+              <span class="visually-hidden">Close log in window</span>
+              <svg width="14" height="14" viewBox="0 0 14 14" xmlns="http://www.w3.org/2000/svg" fill="currentColor"
+                stroke="currentColor">
+                <use xlink:href="img/sprite_auto.svg#icon_close"></use>
+              </svg>
             </button>
-            <p>
-              Don’t have an account?
-            </p>
-            <a href="#" aria-label="Go to registration page">
-              Sign up
-            </a>
-          </fieldset>
-        </form>
-      </div>
+            <div class="login__wrapper">
+              <h2>
+                Log in
+              </h2>
+              <form class="form" action="#" method="post">
+                <fieldset>
+                  <ul>
+                    <li>
+                      <input type="email" name="email" placeholder="Your E-mail" id="email" required />
+                      <label class="visually-hidden" for="email">
+                        Fill in the required field e-Mail
+                      </label>
+                    </li>
+                    <li>
+                      <input type="password" name="password" placeholder="Password" id="password" required />
+                      <label for="password">
+                        <a href="#" aria-label="Recover password">Forgot your password?</a>
+                      </label>
+                    </li>
+                  </ul>
+                  <button class="button button--accent" type="submit">
+                    Log in
+                  </button>
+                  <div class="login__registration">
+                    <p>
+                      Don&#8242;t have an account?
+                    </p>
+                    <a href="#" aria-label="Go to registration page">
+                      Sign up
+                    </a>
+                  </div>
+                </fieldset>
+              </form>
+            </div>
+          </article>
     </section>
   </main>
     <footer class="page-footer footer">
