--- a/source/main.html
+++ b/source/main.html
@@ -69,7 +69,7 @@
         </ul>
       </div>
     </div>
-    <nav class="header__nav nav container">
+    <nav class="page-header__nav nav container">
       <ul class="nav__list nav__list--main">
         <li>
           <a class="nav__link" href="#" aria-label="Go to the section what&#8242;s new">
@@ -116,7 +116,7 @@
       </ul>
       <ul class="nav__list nav__list--user">
         <li>
-          <a class="user__popup nav__link" href="login.html" aria-label="Go to log in page">
+          <a class="nav__link nav__link--login" href="login.html" aria-label="Go to log in page">
             Login
           </a>
         </li>
@@ -716,7 +716,7 @@
     <section class="follow container">
       <h2>
         <span>@</span>
-          Chjewellery
+        Chjewellery
       </h2>
       <a class="follow__link" href="#" aria-label="Go to the follow us page">
         <span>Follow Us</span>
@@ -922,7 +922,7 @@
               </a>
             </li>
             <li>
-              <a href="#" aria-label="Go to contacts page">
+              <a href="#" aria-label="Go to log in page">
                 Contact us
               </a>
             </li>
@@ -986,29 +986,43 @@
   <template id="login">
     <article class="popup login">
       <button type="button" class="login__close-button popup__close-button">
-        <span class="visually-hidden">Открыть меню</span>
-        <svg width="18" height="16" viewBox="0 0 20 18" xmlns="http://www.w3.org/2000/svg" fill="currentColor"
+        <span class="visually-hidden">Close log in window</span>
+        <svg width="14" height="14" viewBox="0 0 14 14" xmlns="http://www.w3.org/2000/svg" fill="currentColor"
           stroke="currentColor">
-          <use xlink:href="img/sprite_auto.svg#icon_menu-burger"></use>
+          <use xlink:href="img/sprite_auto.svg#icon_close"></use>
         </svg>
       </button>
       <div class="login__wrapper">
         <h2>
           Log in
         </h2>
-        <form class="subscription__form form" action="#" method="post">
+        <form class="form" action="#" method="post">
           <fieldset>
-            <input type="email" name="email" placeholder="Your E-mail" required />
-            <input type="password" name="password" placeholder="Password" required />
-            <button type="submit">
+            <ul>
+              <li>
+                <input type="email" name="email" placeholder="Your E-mail" id="email" required />
+                <label class="visually-hidden" for="email">
+                  Fill in the required field e-Mail
+                </label>
+              </li>
+              <li>
+                <input type="password" name="password" placeholder="Password" id="password" required />
+                <label for="password">
+                  <a href="#" aria-label="Recover password">Forgot your password?</a>
+                </label>
+              </li>
+            </ul>
+            <button class="button button--accent" type="submit">
               Log in
             </button>
-            <p>
-              Don&#8242;t have an account?
-            </p>
-            <a href="#" aria-label="Go to registration page">
-              Sign up
-            </a>
+            <div class="login__registration">
+              <p>
+                Don&#8242;t have an account?
+              </p>
+              <a href="#" aria-label="Go to registration page">
+                Sign up
+              </a>
+            </div>
           </fieldset>
         </form>
       </div>
