Исправляет открытие окна log in + focus

--- a/source/main.html
+++ b/source/main.html
@@ -1000,7 +1000,7 @@
           <fieldset>
             <ul>
               <li>
-                <input type="email" name="email" placeholder="Your E-mail" id="email" required />
+                <input type="email" name="email" placeholder="Your E-mail" id="e-mail" required />
                 <label class="visually-hidden" for="email">
                   Fill in the required field e-Mail
                 </label>
