--- a/source/main.html
+++ b/source/main.html
@@ -170,7 +170,7 @@
               Necklace with amethyst
             </h3>
             <span>
-              $ 145
+              &#36;&nbsp;145
             </span>
           </a>
         </div>
@@ -200,7 +200,7 @@
               Layered choker
             </h3>
             <span>
-              $ 115
+              &#36;&nbsp;115
             </span>
           </a>
         </div>
@@ -230,7 +230,7 @@
               Gold chain
             </h3>
             <span>
-              $ 215
+              &#36;&nbsp;215
             </span>
           </a>
         </div>
@@ -259,7 +259,7 @@
               Galaxy earrings
             </h3>
             <span>
-              $ 95
+              &#36;&nbsp;95
             </span>
           </a>
         </div>
@@ -289,7 +289,7 @@
               Double pearl earrings
             </h3>
             <span>
-              $ 115
+              &#36;&nbsp;115
             </span>
           </a>
         </div>
@@ -319,7 +319,7 @@
               Choker with gold bead
             </h3>
             <span>
-              $ 55
+              &#36;&nbsp;55
             </span>
           </a>
         </div>
@@ -349,7 +349,7 @@
               Gold layered necklace
             </h3>
             <span>
-              $ 155
+              &#36;&nbsp;155
             </span>
           </a>
         </div>
@@ -379,7 +379,7 @@
               Blue gemstone pendant
             </h3>
             <span>
-              $ 105
+              &#36;&nbsp;105
             </span>
           </a>
         </div>
@@ -408,7 +408,7 @@
               Boho earrings
             </h3>
             <span>
-              $ 75
+              &#36;&nbsp;75
             </span>
           </a>
         </div>
@@ -437,7 +437,7 @@
               Gold bird necklace
             </h3>
             <span>
-              $ 135
+              &#36;&nbsp;135
             </span>
           </a>
         </div>
@@ -467,7 +467,7 @@
               Black leather choker
             </h3>
             <span>
-              $ 145
+              &#36;&nbsp;145
             </span>
           </a>
         </div>
@@ -497,7 +497,7 @@
               Elephant earrings
             </h3>
             <span>
-              $ 95
+              &#36;&nbsp;95
             </span>
           </a>
         </div>
@@ -865,11 +865,11 @@
   <footer class="page-footer footer">
     <div class="footer__wrapper container">
       <section class="subscription">
-        <h2>The good stuff in your inbox</h2>
+        <h2>The good stuff in&nbsp;your inbox</h2>
         <form class="subscription__form form" action="#" method="post">
           <fieldset>
             <legend>
-              News and updates from CH. No spam, we promise.
+              News and updates from CH. No&nbsp;spam, we promise.
             </legend>
             <input type="email" name="email" placeholder="Your E-mail" required />
             <div class="subscription__button">
