--- a/source/catalog.html
+++ b/source/catalog.html
@@ -173,13 +173,13 @@
                   <div class="accordion__content">
                     <ul class="filter__list">
                       <li>
-                        <input type="checkbox" name="necklaces" id="necklaces" checked />
+                        <input type="checkbox" name="necklaces" id="necklaces" />
                         <label for="necklaces">
                           Necklaces
                         </label>
                       </li>
                       <li>
-                        <input type="checkbox" name="chokers" id="chokers" checked />
+                        <input type="checkbox" name="chokers" id="chokers" />
                         <label for="chokers">
                           Chokers
                         </label>
@@ -191,7 +191,7 @@
                         </label>
                       </li>
                       <li>
-                        <input type="checkbox" name="earrings" id="earrings" checked />
+                        <input type="checkbox" name="earrings" id="earrings" />
                         <label for="earrings">
                           Earrings
                         </label>
@@ -219,7 +219,7 @@
                   <div class="accordion__content">
                     <ul class="filter__list">
                       <li>
-                        <input type="checkbox" name="gold" id="gold" checked />
+                        <input type="checkbox" name="gold" id="gold" />
                         <label for="gold">
                           Gold
                         </label>
@@ -253,7 +253,7 @@
                   <div class="accordion__content">
                     <ul class="filter__list">
                       <li>
-                        <input type="checkbox" name="pink-flamingo" id="pink-flamingo" checked />
+                        <input type="checkbox" name="pink-flamingo" id="pink-flamingo" />
                         <label for="pink-flamingo">
                           Pink flamingo
                         </label>
@@ -290,10 +290,10 @@
                         <div class="price__bar"></div>
                       </div>
                       <div class="price__toggle price__toggle--min" tabindex="0">
-                        <span>&#8381;&nbsp;55</span>
+                        <span>&#36;&nbsp;55</span>
                       </div>
                       <div class="price__toggle price__toggle--max" tabindex="0">
-                        <span>&#8381;&nbsp;155</span>
+                        <span>&#36;&nbsp;155</span>
                       </div>
                     </div>
                   </div>
@@ -337,7 +337,7 @@
                 Double pearl earrings
               </h3>
               <span>
-                $ 115
+                &#36;&nbsp;115
               </span>
             </a>
           </li>
@@ -367,7 +367,7 @@
                 Choker with gold bead
               </h3>
               <span>
-                $ 55
+                &#36;&nbsp;55
               </span>
             </a>
           </li>
@@ -397,7 +397,7 @@
                 Gold layered necklace
               </h3>
               <span>
-                $ 155
+                &#36;&nbsp;155
               </span>
             </a>
           </li>
@@ -427,7 +427,7 @@
                 Blue gemstone pendant
               </h3>
               <span>
-                $ 105
+                &#36;&nbsp;105
               </span>
             </a>
           </li>
@@ -456,7 +456,7 @@
                 Boho earrings
               </h3>
               <span>
-                $ 75
+                &#36;&nbsp;75
               </span>
             </a>
           </li>
@@ -485,7 +485,7 @@
                 Gold bird necklace
               </h3>
               <span>
-                $ 135
+                &#36;&nbsp;135
               </span>
             </a>
           </li>
@@ -515,7 +515,7 @@
                 Black leather choker
               </h3>
               <span>
-                $ 145
+                &#36;&nbsp;145
               </span>
             </a>
           </li>
@@ -545,7 +545,7 @@
                 Necklace with amethyst
               </h3>
               <span>
-                $ 145
+                &#36;&nbsp;145
               </span>
             </a>
           </li>
@@ -575,7 +575,7 @@
                 Elephant earrings
               </h3>
               <span>
-                $ 95
+                &#36;&nbsp;95
               </span>
             </a>
           </li>
@@ -605,7 +605,7 @@
                 Threader necklace
               </h3>
               <span>
-                $ 115
+                &#36;&nbsp;115
               </span>
             </a>
           </li>
@@ -635,7 +635,7 @@
                 Origami crane necklace
               </h3>
               <span>
-                $ 105
+                $&nbsp;105
               </span>
             </a>
           </li>
@@ -664,7 +664,7 @@
                 Marble earrings
               </h3>
               <span>
-                $ 95
+                $&nbsp;95
               </span>
             </a>
           </li>
@@ -675,25 +675,25 @@
       <div class="pagination__wrapper container">
         <h2 class="visually-hidden">Navigation of products from the catalog</h2>
         <div class="pagination__list">
-        <button type="button">Previous</button>
-        <ul>
-          <li class="pagination__item pagination__item--current">
-            <a class="pagination__link">1</a>
-          </li>
-          <li class="pagination__item">
-            <a class="pagination__link" href="#">2</a>
-          </li>
-          <li class="pagination__item">
-            <a class="pagination__link" href="#">3</a>
-          </li>
-          <li class="pagination__item">
-            <a class="pagination__link" href="#">4</a>
-          </li>
-          <li class="pagination__item">
-            <a class="pagination__link" href="#">5</a>
-          </li>
-        </ul>
-        <button type="button">Next</button>
+          <button type="button">Previous</button>
+          <ul>
+            <li class="pagination__item pagination__item--current">
+              <a class="pagination__link">1</a>
+            </li>
+            <li class="pagination__item">
+              <a class="pagination__link" href="#">2</a>
+            </li>
+            <li class="pagination__item">
+              <a class="pagination__link" href="#">3</a>
+            </li>
+            <li class="pagination__item">
+              <a class="pagination__link" href="#">4</a>
+            </li>
+            <li class="pagination__item">
+              <a class="pagination__link" href="#">5</a>
+            </li>
+          </ul>
+          <button type="button">Next</button>
         </div>
       </div>
     </section>
@@ -701,11 +701,11 @@
   <footer class="page-footer footer">
     <div class="footer__wrapper container">
       <section class="subscription">
-        <h2>The good stuff in your inbox</h2>
+        <h2>The good stuff in&nbsp;your inbox</h2>
         <form class="subscription__form form" action="#" method="post">
           <fieldset>
             <legend>
-              News and updates from CH. No spam, we promise.
+              News and updates from CH. No&nbsp;spam, we promise.
             </legend>
             <input type="email" name="email" placeholder="Your E-mail" required />
             <div class="subscription__button">
