Исправляет доступность интерактивных элементов

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -156,7 +156,7 @@
             <ul class="filters__list accordion__list">
               <li class="filters__item filter accordion__item">
                 <fieldset>
-                  <legend class="filters__toggle accordion__toggle" tabindex="0">
+                  <legend class="filters__toggle accordion__toggle">
                     <span>Product</span>
                     <button type="button">
                       <span class="visually-hidden">View filter</span>
@@ -174,25 +174,25 @@
                     <ul class="filter__list">
                       <li>
                         <input type="checkbox" name="necklaces" id="necklaces" />
-                        <label for="necklaces">
+                        <label for="necklaces" tabindex="0">
                           Necklaces
                         </label>
                       </li>
                       <li>
                         <input type="checkbox" name="chokers" id="chokers" />
-                        <label for="chokers">
+                        <label for="chokers" tabindex="0">
                           Chokers
                         </label>
                       </li>
                       <li>
                         <input type="checkbox" name="rings" id="rings" />
-                        <label for="rings">
+                        <label for="rings" tabindex="0">
                           Rings
                         </label>
                       </li>
                       <li>
                         <input type="checkbox" name="earrings" id="earrings" />
-                        <label for="earrings">
+                        <label for="earrings" tabindex="0">
                           Earrings
                         </label>
                       </li>
@@ -202,7 +202,7 @@
               </li>
               <li class="filters__item filter accordion__item">
                 <fieldset>
-                  <legend class="filters__toggle accordion__toggle" tabindex="0">
+                  <legend class="filters__toggle accordion__toggle">
                     Material
                     <button type="button">
                       <span class="visually-hidden">View filter</span>
@@ -220,13 +220,13 @@
                     <ul class="filter__list">
                       <li>
                         <input type="checkbox" name="gold" id="gold" />
-                        <label for="gold">
+                        <label for="gold" tabindex="0">
                           Gold
                         </label>
                       </li>
                       <li>
                         <input type="checkbox" name="silver" id="silver" />
-                        <label for="silver">
+                        <label for="silver" tabindex="0">
                           Silver
                         </label>
                       </li>
@@ -236,7 +236,7 @@
               </li>
               <li class="filters__item filter accordion__item">
                 <fieldset>
-                  <legend class="filters__toggle accordion__toggle" tabindex="0">
+                  <legend class="filters__toggle accordion__toggle">
                     Collection
                     <button type="button">
                       <span class="visually-hidden">View filter</span>
@@ -254,13 +254,13 @@
                     <ul class="filter__list">
                       <li>
                         <input type="checkbox" name="pink-flamingo" id="pink-flamingo" />
-                        <label for="pink-flamingo">
+                        <label for="pink-flamingo" tabindex="0">
                           Pink flamingo
                         </label>
                       </li>
                       <li>
                         <input type="checkbox" name="dreams" id="dreams" />
-                        <label for="dreams">
+                        <label for="dreams" tabindex="0">
                           Dreams
                         </label>
                       </li>
@@ -270,7 +270,7 @@
               </li>
               <li class="filters__item filter accordion__item">
                 <fieldset>
-                  <legend class="filters__toggle accordion__toggle" tabindex="0">
+                  <legend class="filters__toggle accordion__toggle">
                     Price
                     <button type="button">
                       <span class="visually-hidden">View filter</span>
