--- a/source/main.html
+++ b/source/main.html
@@ -42,7 +42,7 @@
           </label>
           <input type="search" placeholder="Type here to search" id="search" name="q">
         </form>
-        <div class="header__logo logo">
+        <div class="header__logo logo logo--main">
           <a class="logo__link" aria-label="Logotype CH jewellery. Go to main page">
             <svg width="66" height="66" viewBox="0 0 66 66" xmlns="http://www.w3.org/2000/svg">
               <use xlink:href="img/sprite_auto.svg#logo"></use>
@@ -617,7 +617,7 @@
       <div class="faq__block accordion">
         <ul class="accordion__list">
           <li class="accordion__item">
-            <h3 class="faq__toggle accordion__toggle" tabindex="0">
+            <h3 class="faq__toggle accordion__toggle">
               <span>What materials are the&nbsp;jewellery made of?</span>
               <button type="button">
                 <span class="visually-hidden">View answer</span>
@@ -641,7 +641,7 @@
             </div>
           </li>
           <li class="accordion__item">
-            <h3 class="faq__toggle accordion__toggle" tabindex="0">
+            <h3 class="faq__toggle accordion__toggle">
               <span>Which countries do&nbsp;you&nbsp;deliver to?</span>
               <button type="button">
                 <span class="visually-hidden">View answer</span>
@@ -665,7 +665,7 @@
             </div>
           </li>
           <li class="accordion__item">
-            <h3 class="faq__toggle accordion__toggle" tabindex="0">
+            <h3 class="faq__toggle accordion__toggle">
               <span>What are the payment&nbsp;methods?</span>
               <button type="button">
                 <span class="visually-hidden">View answer</span>
